base/ufo/ufo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ufo-service
  labels:
    app: ufo-app
    # ufo-prometheus-discovery: 'true'
spec:
  type: ClusterIP
  selector:
    app: ufo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  # inside container
