base/ufo/ufo-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ufo-httproute
  annotations:
    # Exclude HTTPRoute from aserver-side apply.
    # See bug https://github.com/argoproj/argo-cd/issues/22151
    argocd.argoproj.io/sync-options: ServerSideApply=false
    # Will run in wave 2:
    # Wave 0: create cert-manager
    # Wave 1: crate Issuer
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
  - name: ufo-gateway
  # hostnames:
  # - "vybory.live"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ufo-service
      port: 80
